--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ var thisUser;
   function getInfo() {
     FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id'}, function(response) {
       document.getElementById('userID').innerHTML = response.first_name + "<br>" +
-                                                    reponse.last_name + "<br>" + 
+                                                    response.last_name + "<br>" + 
                                                     response.id;
     });
   }
