--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@ var thisUser;
     });
   }
 
+  function logout(){
+    FB.logout(function(response){
+      console.log(response);
+    })
+  }
+
 
   function getInfo() {
     FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id'}, function(response) {
